# faketicket

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  HACKING.md  README.md  commands.yml  index.d.ts  package.json  response.d.ts  run-test
app/: README.md  nuxt.config.js  package.json
app/components/: Spacer.vue  Window.vue
app/layouts/: default.vue
app/lib/: fetch.js
app/pages/: dashboard.vue  index.vue  orderadd.vue  orders.vue  querytrain.vue  trainadd.vue  travelplan.vue  useradd.vue  userctl.vue
app/pages/train/_date/: _trainId.vue
app/pages/usermod/: _username.vue
app/server/: index.js  package.json
docs/: installation guide.md  user manual.md
lib/: algorithm.h  algorithm_test.ans  algorithm_test.cpp  algorithm_test.gen  algorithm_test.in  datetime.cpp  datetime.h  datetime_test.cpp  exception.h  hashmap.h  hashmap_test.cpp  lru-cache.h  lru-cache_test.cpp  map.h  map_test.ans  map_test.cpp  optional.h  priority-queue.h  result.h  result_test.cpp  utility.cpp  utility.h  utility_test.cpp  variant.h  variant_test.cpp  vector.h
lib/file/: array.h  bptree.h  bptree_test.ans  bptree_test.cpp  file.h  index.h  set.h  varchar.h
lib/file/internal/: file.h  unmanaged-object.h
lib/internal/: cmp.inc  map-value-compare.inc  rehash.inc  tree.h  variant-impl.h
src/: main.cpp  misc.cpp  node.cpp  order.cpp  order.h  parser.cpp  parser.h  response.cpp  response.h  rollback.cpp  rollback.h  run.h  strings.h  train.cpp  train.h  user.cpp  user.h
